Refactor HTML structure and script paths

--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,24 @@
 <html>
-<head>
+  <head>
     <style>
-        body {
-            margin: 0;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            text-rendering: optimizeLegibility;
-        }
-
-        input::placeholder {
-            color: #94a3b8;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
+      body {
+        margin: 0;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-rendering: optimizeLegibility;
+      }
+      input::placeholder {
+        color: #94a3b8;
+      }
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
     </style>
-</head>
-
-<body>
-
-    <!-- Leaderboard -->
-    <div style="
+  </head>
+  <body>
+    <div
+      style="
         position: absolute;
         color: white;
         padding: 8px;
@@ -30,83 +26,102 @@
         font-size: 14px;
         user-select: none;
         background: rgba(0, 0, 0, 0.7);
-      ">
-        <div style="margin-bottom: 8px">Leaderboard</div>
-        <div id="PlayerLabels"></div>
+      "
+    >
+      <div style="margin-bottom: 8px">Leaderboard</div>
+      <div id="PlayerLabels"></div>
     </div>
 
     <canvas></canvas>
 
-    <!-- HOST / JOIN MENU -->
-    <div id="connectionMenu" style="
+    <div
+      id="connectionMenu"
+      style="
         position: absolute;
-        top: 0; left: 0; right: 0; bottom: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        background: rgba(0,0,0,0.8);
+        background: rgba(0, 0, 0, 0.8);
         color: white;
         font-family: sans-serif;
         z-index: 9999;
-      ">
-        <button id="hostBtn" style="margin: 10px; padding: 10px 20px;">Host Game</button>
-
-        <input id="ipInput" placeholder="Host IP (ex: 123.45.67.89:3000)"
-               style="padding: 8px; border-radius: 8px; border: none; margin: 10px;">
-
-        <button id="joinBtn" style="margin: 10px; padding: 10px 20px;">Join Game</button>
+      "
+    >
+      <button id="hostBtn" style="margin: 10px; padding: 10px 20px">
+        Connect
+      </button>
+      <div
+        id="serverIpDisplay"
+        style="margin-top: 10px; color: #ccc; font-size: 14px"
+      >
+        Server IP: Loading...
+      </div>
     </div>
 
-    <!-- USERNAME FORM -->
-    <div style="
+    <div
+      style="
         display: flex;
         align-items: center;
         justify-content: center;
         position: absolute;
-        top: 0; right: 0; bottom: 0; left: 0;
-      ">
-        <form id="usernameForm">
-            <div>
-                <input id="UsernameInput"
-                       type="text"
-                       placeholder="Username"
-                       style="
-                            padding: 12px;
-                            border-radius: 20px;
-                            border: none;
-                            background: #475569;
-                            color: #cbd5e1;
-                         " />
-            </div>
-            <div style="text-align: center; margin-top: 8px">
-                <button type="submit"
-                        style="
-                            padding: 8px 20px;
-                            border-radius: 100px;
-                            border: none;
-                            background-image: linear-gradient(to right, rgb(6, 182, 212), rgb(59, 130, 246));
-                            color: white;
-                            font-weight: bold;
-                            cursor: pointer;
-                          ">
-                    Start!
-                </button>
-            </div>
-        </form>
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      "
+    >
+      <form id="usernameForm">
+        <div>
+          <input
+            id="UsernameInput"
+            type="text"
+            placeholder="Username"
+            style="
+              padding: 12px;
+              border-radius: 20px;
+              border: none;
+              background: #475569;
+              color: #cbd5e1;
+            "
+          />
+        </div>
+        <div style="text-align: center; margin-top: 8px">
+          <button
+            type="submit"
+            style="
+              padding: 8px 20px;
+              border-radius: 100px;
+              border: none;
+              background-image: linear-gradient(
+                to right,
+                rgb(6, 182, 212),
+                rgb(59, 130, 246)
+              );
+              color: white;
+              font-weight: bold;
+              cursor: pointer;
+            "
+          >
+            Start!
+          </button>
+        </div>
+      </form>
     </div>
 
-    <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js"></script>
-    <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 
-    <script src="./js/classes/Enemy.js"></script>
-    <script src="./js/classes/Player.js"></script>
-    <script src="./js/classes/Particle.js"></script>
-    <script src="./js/classes/Projectile.js"></script>
-    <script src="./js/frontend.js"></script>
-    <script src="./js/classes/PowerUp.js"></script>
-    <script src="./js/eventListeners.js"></script>
-
-</body>
+    <script src="./public/js/classes/Enemy.js"></script>
+    <script src="./public/js/classes/Player.js"></script>
+    <script src="./public/js/classes/Particle.js"></script>
+    <script src="./public/js/classes/Projectile.js"></script>
+    <script src="./public/js/frontend.js"></script>
+    <script src="./public/js/classes/PowerUp.js"></script>
+    <script src="./public/js/eventListeners.js"></script>
+  </body>
 </html>
