--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       }
     </style>
   </head>
+
   <body>
     <div
       style="
@@ -55,11 +56,12 @@
       <button id="hostBtn" style="margin: 10px; padding: 10px 20px">
         Connect
       </button>
+
       <div
         id="serverIpDisplay"
         style="margin-top: 10px; color: #ccc; font-size: 14px"
       >
-        Server IP: Loading...
+        Server: Loading...
       </div>
     </div>
 
@@ -116,12 +118,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 
-    <script src="./public/js/classes/Enemy.js"></script>
-    <script src="./public/js/classes/Player.js"></script>
-    <script src="./public/js/classes/Particle.js"></script>
-    <script src="./public/js/classes/Projectile.js"></script>
-    <script src="./public/js/frontend.js"></script>
-    <script src="./public/js/classes/PowerUp.js"></script>
-    <script src="./public/js/eventListeners.js"></script>
+    <script src="./js/classes/Block.js"></script>
+    <script src="./js/classes/Enemy.js"></script>
+    <script src="./js/classes/Player.js"></script>
+    <script src="./js/classes/Particle.js"></script>
+    <script src="./js/classes/Projectile.js"></script>
+    <script src="./js/classes/PowerUp.js"></script>
+
+    <script src="./js/frontend.js"></script>
+    <script src="./js/eventListeners.js"></script>
   </body>
 </html>
