--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,7 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <script src="./js/classes/Block.js"></script>
+    <script src="./js/classes/HealthPickup.js"></script>
     <script src="./js/classes/Enemy.js"></script>
     <script src="./js/classes/Player.js"></script>
     <script src="./js/classes/Particle.js"></script>
