--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,38 @@
         height: 100%;
       }
     </style>
+    <div id="chatContainer" style="
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  width: 300px;
+  height: 200px;
+  background: rgba(0,0,0,0.6);
+  color: white;
+  font-family: sans-serif;
+  font-size: 14px;
+  padding: 10px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+">
+  <div id="chatMessages" style="
+    flex: 1;
+    overflow-y: auto;
+    margin-bottom: 8px;
+  "></div>
+
+  <input id="chatInput" placeholder="Type message..."
+    style="
+      width: 100%;
+      padding: 6px;
+      border-radius: 6px;
+      border: none;
+      outline: none;
+      background: #334155;
+      color: white;
+    ">
+</div>
   </head>
 
   <body>
