Add z-index to chat message and input styles

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
   border-radius: 8px;
   display: flex;
   flex-direction: column;
+      z-index: 99;
+
 ">
   <div id="chatMessages" style="
     flex: 1;
@@ -45,6 +47,8 @@
       outline: none;
       background: #334155;
       color: white;
+      z-index: 100;
+
     ">
 </div>
   </head>
